gcc/testsuite/rust/rustc/ui/impl-trait/explicit-generic-args-with-impl-trait/explicit-generic-args-for-impl_dg.rs
fn foo<T: ?Sized>(_f: impl AsRef<T>) {}

fn main() {
    foo::<str, String>("".to_string()); // { dg-error ".E0107." "" { target *-*-* } }
}

